--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.509.3</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>1.638</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
   <artifactId>leiningen-plugin</artifactId>
@@ -50,5 +50,17 @@
       <email>pyr@spootnik.org</email>
     </developer>
   </developers>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
